--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
         <img class="element__image" src="./images/karachaevo-cherkesia.png" alt="Карачаево-Черкесия">
         <div class="element__info">
           <h2 class="element__title">Карачаево-Черкесия</h2>
-          <button type="submit" class="element__like" title="Нравится"></button>
+          <button type="button" class="element__like" title="Нравится"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/dombai.png" alt="Домбай">
         <div class="element__info">
           <h2 class="element__title">Домбай</h2>
-          <button type="submit" class="element__like" title="Нравится"></button>
+          <button type="button" class="element__like" title="Нравится"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/elbrus.png" alt="Эльбрус">
         <div class="element__info">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="submit" class="element__like" title="Нравится"></button>
+          <button type="button" class="element__like" title="Нравится"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/dombai.png" alt="Домбай">
         <div class="element__info">
           <h2 class="element__title">Домбай</h2>
-          <button type="submit" class="element__like" title="Нравится"></button>
+          <button type="button" class="element__like" title="Нравится"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/elbrus.png" alt="Эльбрус">
         <div class="element__info">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="submit" class="element__like" title="Нравится"></button>
+          <button type="button" class="element__like" title="Нравится"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/karachaevo-cherkesia.png" alt="Карачаево-Черкесия">
         <div class="element__info">
           <h2 class="element__title">Карачаевск</h2>
-          <button type="submit" class="element__like" title="Нравится"></button>
+          <button type="button" class="element__like" title="Нравится"></button>
         </div>
       </div>
     </section>
@@ -76,10 +76,10 @@
     <div class="popup__container">
       <button type="button" class="popup__close" title="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__inputs" name="userInfo">
-        <input type="text" name="userName" class="popup__user-info popup__user-info_name" placeholder="Жак-Ив Кусто"
+      <form class="popup__inputs" name="user-info">
+        <input type="text" name="userName" class="popup__user-info popup__user-info_type_name" placeholder="Жак-Ив Кусто"
           required>
-        <input type="text" name="userStatus" class="popup__user-info popup__user-info_status"
+        <input type="text" name="userStatus" class="popup__user-info popup__user-info_type_status"
           placeholder="Исследователь океана" required>
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
