--- a/index.html
+++ b/index.html
@@ -24,67 +24,60 @@
       </div>
       <button type="button" class="profile__add" title="Добавить"></button>
     </section>
-    <section class="elements">
-      <div class="element">
-        <img class="element__image" src="./images/karachaevo-cherkesia.png" alt="Карачаево-Черкесия">
-        <div class="element__info">
-          <h2 class="element__title">Карачаево-Черкесия</h2>
-          <button type="button" class="element__like" title="Нравится"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/dombai.png" alt="Домбай">
-        <div class="element__info">
-          <h2 class="element__title">Домбай</h2>
-          <button type="button" class="element__like" title="Нравится"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/elbrus.png" alt="Эльбрус">
-        <div class="element__info">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="button" class="element__like" title="Нравится"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/dombai.png" alt="Домбай">
-        <div class="element__info">
-          <h2 class="element__title">Домбай</h2>
-          <button type="button" class="element__like" title="Нравится"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/elbrus.png" alt="Эльбрус">
-        <div class="element__info">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="button" class="element__like" title="Нравится"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/karachaevo-cherkesia.png" alt="Карачаево-Черкесия">
-        <div class="element__info">
-          <h2 class="element__title">Карачаевск</h2>
-          <button type="button" class="element__like" title="Нравится"></button>
-        </div>
-      </div>
+    <section class="elements-place">
+      <ul class="elements">
+
+      </ul>
     </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
-  <div class="popup">
+  <div class="popup popup_for_edit">
     <div class="popup__container">
       <button type="button" class="popup__close" title="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__inputs" name="user-info">
-        <input type="text" name="userName" class="popup__user-info popup__user-info_type_name" placeholder="Жак-Ив Кусто"
+        <input type="text" name="userName" class="popup__add-item popup__add-item_type_name" placeholder="Жак-Ив Кусто"
           required>
-        <input type="text" name="userStatus" class="popup__user-info popup__user-info_type_status"
+        <input type="text" name="userStatus" class="popup__add-item popup__add-item_type_status"
           placeholder="Исследователь океана" required>
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
     </div>
   </div>
+  <div class="popup popup_for_add">
+    <div class="popup__container">
+      <button type="button" class="popup__close" title="Закрыть"></button>
+      <h2 class="popup__title">Новое место</h2>
+      <form class="popup__inputs popup__inputs_add-item" name="add-item">
+        <input type="text" name="item-title" class="popup__add-item popup__add-item_type_title" placeholder="Название"
+          required>
+        <input type="url" name="item-link" class="popup__add-item popup__add-item_type_link"
+          placeholder="Ссылка на картинку" required>
+        <button type="submit" class="popup__button">Создать</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_for_card">
+    <div class="popup__full-image">
+      <img class="popup__card-image" src="" alt=" ">
+      <button class="popup__close popup__close_full-image" type="button"></button>
+      <h2 class="popup__card-title"></h2>
+    </div>
+  </div>
+
+
+  <template id="elements-template">
+    <li class="element">
+      <img class="element__image" scr="" alt="Изображение">
+      <button type="button" class="element__delete"></button>
+      <div class="element__info">
+        <h2 class="element__title"></h2>
+        <button type="button" class="element__like" title="Нравится"></button>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 
