--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   <div class="popup popup_for_card">
     <div class="popup__full-image">
-      <img class="popup__card-image" src="" alt=" ">
+      <img class="popup__card-image" src="#" alt=" ">
       <button class="popup__close popup__close_full-image" type="button"></button>
       <h2 class="popup__card-title"></h2>
     </div>
