исправления в js и верстке

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <template id="elements-template">
     <li class="element">
-      <img class="element__image" scr="" alt="Изображение">
+      <img class="element__image" scr="" alt="">
       <button type="button" class="element__delete"></button>
       <div class="element__info">
         <h2 class="element__title"></h2>
