--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="popup__container">
       <button type="button" class="popup__close" title="Закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__inputs popup__form" name="user-info" novalidate>
+      <form class="popup__inputs popup__inputs_edit-item popup__form" name="user-info" novalidate>
         <input type="text" id="input-name" name="userName"
           class="popup__add-item popup__add-item_type_name popup__input" placeholder="Жак-Ив Кусто" required
           minlength="2" maxlength="40">
@@ -62,7 +62,7 @@
         <input type="url" id="input-link" name="item-link"
           class="popup__add-item popup__add-item_type_link popup__input" placeholder="Ссылка на картинку" required>
         <span class="popup__error input-link-error"></span>
-        <button type="submit" class="popup__button">Создать</button>
+        <button type="submit" class="popup__button popup__button_add">Создать</button>
       </form>
     </div>
   </div>
@@ -85,6 +85,7 @@
       </div>
     </li>
   </template>
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
   <script src="./scripts/validate.js"></script>
 </body>
