--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/data.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
   <script src="./scripts/validate.js"></script>
 </body>
 
