--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__inputs popup__inputs_edit-item popup__form" name="user-info" novalidate>
         <input type="text" id="input-name" name="userName"
-          class="popup__add-item popup__add-item_type_name popup__input" placeholder="Жак-Ив Кусто" required
+          class="popup__add-item popup__add-item_type_name popup__input" placeholder="Имя" required
           minlength="2" maxlength="40">
         <span class="popup__error input-name-error"></span>
         <input type="text" id="input-status" name="userStatus"
-          class="popup__add-item popup__add-item_type_status popup__input" placeholder="Исследователь океана" required
+          class="popup__add-item popup__add-item_type_status popup__input" placeholder="Вид деятельность" required
           minlength="2" maxlength="200">
         <span class="popup__error input-status-error"></span>
         <button type="submit" class="popup__button">Сохранить</button>
