--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
 </head>
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
+    <img class="header__logo" src="<%=require('./images/header-logo.svg')%>" alt="Логотип">
   </header>
   <main class="content">
     <section class="profile">
       <div class="profile__list">
-        <img class="profile__avatar" src="./images/profile-image.png" alt="Жак-Ив Кусто">
+        <img class="profile__avatar" src="<%=require('./images/profile-image.png')%>" alt="Жак-Ив Кусто">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button type="button" class="profile__edit" title="Кнопка редактирования профиля"></button>
@@ -39,8 +38,8 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__inputs popup__inputs_edit-item popup__form" name="user-info" novalidate>
         <input type="text" id="input-name" name="userName"
-          class="popup__add-item popup__add-item_type_name popup__input" placeholder="Имя" required
-          minlength="2" maxlength="40">
+          class="popup__add-item popup__add-item_type_name popup__input" placeholder="Имя" required minlength="2"
+          maxlength="40">
         <span class="popup__error input-name-error"></span>
         <input type="text" id="input-status" name="userStatus"
           class="popup__add-item popup__add-item_type_status popup__input" placeholder="Вид деятельность" required
@@ -85,8 +84,7 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/data.js"></script>
-  <script type="module" src="./scripts/index.js"></script>
+
 </body>
 
 </html>
