--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,14 @@
   <main class="content">
     <section class="profile">
       <div class="profile__list">
-        <img class="profile__avatar" src="<%=require('./images/profile-image.png')%>" alt="Жак-Ив Кусто">
-        <button type="button" class="profile__avatar-button"></button>
+        <div class="profile__box-avatar">
+          <img class="profile__avatar" alt="Аватар"> <!-- src="<%=require('./images/profile-image.png')%>" -->
+          <button type="button" class="profile__avatar-button"></button>
+        </div>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"></h1>
           <button type="button" class="profile__edit" title="Кнопка редактирования профиля"></button>
-          <p class="profile__status">Исследователь океана</p>
+          <p class="profile__status"></p>
         </div>
       </div>
       <button type="button" class="profile__add" title="Добавить"></button>
@@ -55,12 +57,11 @@
       <button type="button" class="popup__close" title="Закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__inputs popup__inputs_add-item popup__form" name="add-item" novalidate>
-        <input type="text" id="input-title" name="item-title"
-          class="popup__add-item popup__add-item_type_title popup__input" placeholder="Название" required minlength="2"
-          maxlength="30">
+        <input type="text" id="input-title" name="name" class="popup__add-item popup__add-item_type_title popup__input"
+          placeholder="Название" required minlength="2" maxlength="30">
         <span class="popup__error input-title-error"></span>
-        <input type="url" id="input-link" name="item-link"
-          class="popup__add-item popup__add-item_type_link popup__input" placeholder="Ссылка на картинку" required>
+        <input type="url" id="input-link" name="link" class="popup__add-item popup__add-item_type_link popup__input"
+          placeholder="Ссылка на картинку" required>
         <span class="popup__error input-link-error"></span>
         <button type="submit" class="popup__button popup__button_add">Создать</button>
       </form>
@@ -77,10 +78,10 @@
     <div class="popup__container popup__container_avatar">
       <button type="button" class="popup__close" title="Закрыть"></button>
       <h2 class="popup__title">Обновить аватар</h2>
-      <form class="popup__inputs popup__input_avatar popup__form" name="add-item" novalidate>
-        <input type="url" id="input-link" name="item-link"
-          class="popup__add-item popup__add-item_type_link popup__input" placeholder="Ссылка на картинку" required>
-        <span class="popup__error input-link-error"></span>
+      <form class="popup__inputs popup__input_avatar popup__form" name="avatar-item" novalidate>
+        <input type="url" id="input-avatar" name="avatar"
+          class="popup__add-item popup__add-item_type_avatar popup__input" placeholder="Ссылка на картинку" required>
+        <span class="popup__error input-avatar-error"></span>
         <button type="submit" class="popup__button popup__button_save-avatar">Сохранить</button>
       </form>
     </div>
