--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
     <div class="popup__container popup__container_avatar">
       <button type="button" class="popup__close" title="Закрыть"></button>
       <h2 class="popup__title">Обновить аватар</h2>
-      <form class="popup__inputs popup__input_avatar popup__form" name="avatar-item" novalidate>
+      <form class="popup__inputs popup__inputs_avatar popup__form" name="avatar-item" novalidate>
         <input type="url" id="input-avatar" name="avatar"
           class="popup__add-item popup__add-item_type_avatar popup__input" placeholder="Ссылка на картинку" required>
         <span class="popup__error input-avatar-error"></span>
